# kattis

./: .gitignore  pyproject.toml
.github/workflows/: lint.yml  marimo.yml  python-poetry-test.yml
__marimo__/session/: demo_fallingleaves.py.json  demo_thirteenfloors.py.json
notebooks/: demo.py  demo_thirteenfloors.py
notebooks/__marimo__/session/: demo.py.json
src/: counting.py  favourable.py  four_thought.py  frog_1d_easy.py  thirteen_floors.py
src/kattis/: counting.py  fallingleaves.py  favourable.py  four_thought.py  frog_1d_easy.py  goingnuts.py  lvable.py  popcount.py  r2.py  thirteen_floors.py
tests/: test_counting.py  test_fallingleaves.py  test_four_thought.py  test_lvable.py  test_thirteen_floors.py
