[project]
name = "kattis"
version = "0.1.0"
description = "My collection of Kattis problem solutions"
authors = [
    {name = "azzahraamonra-etu",email = "ehtaugakandia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "kattis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
